Views do estoque com modal

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/_NovoItem.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/_NovoItem.cshtml
@@ -3,6 +3,7 @@
 
 @*using (Ajax.BeginForm("_NovoItem", "Estoque", new AjaxOptions { OnSuccess = "handleSuccess" }))*@
 
+<div id="modal-placeholder"></div>
 <div class="modal fade" id="add-item" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
