--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/Index.cshtml
@@ -22,8 +22,8 @@
                 <div class="card-body">
                     <div class="card-content">
                         <div class="card-content">
-                            <div id="modal-placeholder"></div>
-                            <button type="button" class="btn btn-info waves-effect" data-toggle="ajax-modal" data-target="#add-item">Novo item</button>
+                            <div class="teste"></div>
+                            <button type="button" class="btn btn-info waves-effect" data-toggle="ajax-modal" data-target="#Modal-lightbox">Novo item</button>
                             @{Html.RenderAction("_NovoItem", "Estoque");}
                         </div>
                         <table class="table">
