--- a/OrganWeb/OrganWeb/Views/Shared/_LoginPartial.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_LoginPartial.cshtml
@@ -24,7 +24,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Registre-se", "LoginRegistro", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Logon", "LoginRegistro", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.RouteLink("LoginRegistro/", "Login")</li>
     </ul>
 }
