Manutenção selecionando com detalhes

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Fazenda/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Fazenda/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.ViewFazenda
+﻿@model OrganWeb.Areas.Sistema.Models.ViewModels.ViewFazenda //não existe ainda!
 
 @{
     ViewBag.Title = "Fazenda";
