Excluir, criar nova manutenção e detalhes funcionando

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Create.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Doenca
+﻿@model OrganWeb.Areas.Sistema.Models.Controles.Doenca
 
 @using (Html.BeginForm("Create", "Doencas", FormMethod.Post)) 
 {
