--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.Doenca>
+﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.Controles.Doenca>
 
 @{
     ViewBag.Title = "Index";
