--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/_NovaManutencao.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/_NovaManutencao.cshtml
@@ -1,17 +1,20 @@
 ﻿@model OrganWeb.Areas.Sistema.Models.Ferramentas.ManutencaoMaquina
 
-<div id="modal-placeholder"></div>
-<div class="modal fade" id="add-item" tabindex="-1" role="dialog" data-backdrop="static">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h6 class="card-title box-title"><i class="icofont icofont-plant"></i>Nova manutenção</h6>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form asp-action="_NovaManutencao">
+@using (Html.BeginForm("_NovaManutencao", "Manutencao", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+
+    <div id="modal-placeholder"></div>
+    <div class="modal fade" id="add-item" tabindex="-1" role="dialog" data-backdrop="static">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="card-title box-title"><i class="icofont icofont-plant"></i>Nova manutenção</h6>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
                     <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
                     <div class="form-group row">
                         <label class="col-sm-8 col-form">@Html.LabelFor(model => model.Manutencao.Nome, new { htmlAttributes = new { @class = "form-control" } })</label>
@@ -51,8 +54,12 @@
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-success m-b-0" data-save="ajax-modal">Adicionar</button>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
