--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Fazenda/_NovoFuncionario.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Fazenda/_NovoFuncionario.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.ViewFazenda
+﻿@model OrganWeb.Areas.Sistema.Models.Funcionarios.Funcionario
 
 <div class="modal fade" id="Modal-lightbox" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
