--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Index.cshtml
@@ -54,6 +54,7 @@
         </div>
     </div>
 </div>
+<div id="modal-placeholder"></div>
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" data-backdrop="static" />
 
 <environment include="Development">
