--- a/OrganWeb/OrganWeb/Views/Shared/_LoginPartial.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_LoginPartial.cshtml
@@ -9,10 +9,11 @@
             <li class="nav-item nav-profile dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
                     <img src="~/Imagens/admin.jpg" alt="profile" />
-                    <span class="nav-profile-name">@Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })</span>
+                    <span class="nav-profile-name">@Html.DisplayName(User.Identity.GetUserName())</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                    <a href="javascript:document.getElementById('logoutForm').submit()"> Fazer logoff</a>
+                    @Html.ActionLink("Configurações", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Configurações", @class = "dropdown-item" })
+                    <a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()"> Fazer logoff</a>
                 </div>
             </li>
         </ul>
