modais da doença funcionando

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Details.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Details.cshtml
@@ -1,9 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Doenca
-
-@{
-    ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿@model OrganWeb.Areas.Sistema.Models.Controles.Doenca
 
 <h2>Details</h2>
 
