--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Edit.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Edit.cshtml
@@ -1,17 +1,9 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Doenca
+﻿@model OrganWeb.Areas.Sistema.Models.Controles.Doenca
 
-@{
-    ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Edit</h2>
-
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Doencas", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Doenca</h4>
         <hr />
@@ -58,10 +50,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
