--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Doencas/Index.cshtml
@@ -1,89 +1,87 @@
 ﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.Controles.Doenca>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Doenças";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" rel="stylesheet" />
-<link href="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.0.5/dist/jBox.all.min.css" rel="stylesheet"/>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.1.0/material.min.css" rel="stylesheet"/>
-<link href="https://cdn.datatables.net/1.10.19/css/dataTables.material.min.css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
 
 <div class="main-body">
     <div class="row">
         <div class="col">
             <div class="card">
-            <div class="card-header">
-                <h6 class="card-title box-title">Itens</h6>
-                <div class="card-header-right">
-                    <ul class="list-unstyled card-option">
-                        <li><i class="ti-minus minimize-card"></i></li>
-                        <li><i class="icon-refresh"></i></li>
-                    </ul>
+                <div class="card-header">
+                    <h6 class="card-title box-title">Doenças</h6>
+                    <div class="card-header-right">
+                        <ul class="list-unstyled card-option">
+                            <li><i class="ti-minus minimize-card"></i></li>
+                            <li><i class="icon-refresh"></i></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="card-body">
-                <div class="card-content">
-                    
-                    <div class="tablecontainer">
-                        <div class="overlay"></div>
-                        <a class="popup btn btn-add" href="/Sistema/Doencas/Create" style="margin-bottom:20px; margin-top:20px;">+ Nova doença</a>
-                        <table class="table" id="myDatatable">
+                <div class="card-body">
+                    <div class="card-content">
 
-                            <thead class="thead-title">
-                                <tr>
-                                    <th>Nome</th>
-                                    <th scope="col">Sintomas</th>
-                                    <th scope="col">Tratamento</th>
-                                    <th scope="col">Descrição</th>
-                                    <th scope="col"></th>
-                                    <th scope="col"></th>
-                                    <th scope="col"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model)
-                                {
-                                    <tr class="tr-shadow">
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Nome)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Sintomas)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Tratamento)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Descricao)
-                                        </td>
-                                        <td>
+                        <div class="tablecontainer">
+                            <div class="overlay"></div>
+                            <a class="popup btn btn-add" href="/Sistema/Doencas/Create" style="margin-bottom:20px; margin-top:20px;">+ Nova doença</a>
+                            <table class="table" id="myDatatable">
 
-                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-
-                                        </td>
-                                        <td>
-                                            @Html.ActionLink("Details", "Details", new { id = item.Id })
-                                        </td>
-                                        <td>
-                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                                        </td>
+                                <thead class="thead-title">
+                                    <tr>
+                                        <th>Nome</th>
+                                        <th scope="col">Sintomas</th>
+                                        <th scope="col">Tratamento</th>
+                                        <th scope="col">Descrição</th>
+                                        <th scope="col"></th>
+                                        <th scope="col"></th>
+                                        <th scope="col"></th>
                                     </tr>
-                                    <tr class="spacer"></tr>
-                                }
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr class="tr-shadow">
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Nome)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Sintomas)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Tratamento)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Descricao)
+                                            </td>
+                                            <td>
+
+                                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "popup" })
+
+                                            </td>
+                                            <td>
+                                                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "popup" })
+                                            </td>
+                                            <td>
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                            </td>
+                                        </tr>
+                                        <tr class="spacer"></tr>
+                                    }
+                                </tbody>
+                            </table>
 
 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-    </div>
 
 
 @section Scripts {
@@ -98,37 +96,7 @@
     <script>
         var Popup;
         $(document).ready(function () {
-            var oTable = $('#myDatatable').DataTable({
-                "ajax": {
-                    "url": '/Sistema/Doencas/GetList',
-                    "type": "get",
-                    "datatype": "json"
-                },
-                "columns": [
-                    { "data": "Nome", "autoWidth": true },
-                    { "data": "Sintomas", "autoWidth": true },
-                    { "data": "Tratamento", "autoWidth": true },
-                    { "data": "Descricao", "autoWidth": true },
-                    {
-                        "data": "Edit", "width": "50px", "render": function (data) {
-                            return '<a class="popup" href="/Sistema/Doencas/Edit' + data + '"><i class="item far fa-edit" style="color: #5e5e5f"></i></a>';
-                        }
-                    },
-                    {
-                        "data": "Edit", "width": "50px", "render": function (data) {
-                            return '<a class="popup" href="/Sistema/Doencas/Details' + data + '"><i class="item fas fa-info-circle" style="color: #5e5e5f"></i></a>';
-                        }
-                    },
-                    {
-                        "data": "Edit", "width": "50px", "render": function (data) {
-                            return '<a class="popup" href="/Sistema/Doencas/Delete' + data + '"><i class="item far fa-trash-alt" style="color: #5e5e5f"></i></a>';
-                        }
-                    },
-                ]
-            })
-
             $('.tablecontainer').on('click', 'a.popup', function (e) {
-                //alert('affa');
                 e.preventDefault();
                 OpenPopup($(this).attr('href'));
 
@@ -147,8 +115,7 @@
                         draggable: false,
                         autoOpen: false,
                         resizable: false,
-                        model: true,
-                        title: 'Popup Dialog',
+                        modal: true,
                         height: 550,
                         width: 600,
                         close: function () {
