Index com cotação e gráfico

--- a/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="navbar-brand-wrapper d-flex justify-content-center">
                 <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
-                    <a class="navbar-brand brand-logo" href="index.html"><img src="~/Imagens/logo.png" alt="logo" /></a>
-                    <a class="navbar-brand brand-logo-mini" href="index.html"><img src="~/Imagens/icone.png" alt="logo" /></a>
+                    <a class="navbar-brand brand-logo" href="#"><img src="~/Imagens/logo.png" alt="logo" /></a>
+                    <a class="navbar-brand brand-logo-mini" href="#"><img src="~/Imagens/icone.png" alt="logo" /></a>
                     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                         <span>
                             <i class="fa fa-bars"></i>
@@ -31,18 +31,6 @@
                 </div>
             </div>
             <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
-                <ul class="navbar-nav mr-lg-4 w-100">
-                    <li class="nav-item nav-search d-none d-lg-block w-100">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="search">
-                                    <i class="mdi mdi-magnify"></i>
-                                </span>
-                            </div>
-                            <input type="text" class="form-control" placeholder="Pesquisar" aria-label="search" aria-describedby="search">
-                        </div>
-                    </li>
-                </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </nav>
