--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/VwItems/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/VwItems/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.VwItems>
+﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.ViewModels.VwItems>
 
 @{
     ViewBag.Title = "Index";
